various updates regarding run time files, canonicalizer, postprocessor

--- a/Manual/autodiff.bib
+++ b/Manual/autodiff.bib
@@ -1404,7 +1404,8 @@
 	referred = "[Coleman1996SaE], [Geitner1996ACo], [Abate2002IAw].",
 	year = "1983",
 	volume = "20",
-	number = "1"
+	number = "1",
+	ad_theotech = "Combinatorics, Sparsity"
 }
 
 @ARTICLE{
@@ -3186,7 +3187,8 @@
 	key = "Hossain1998CaS",
 	referred = "[Griewank2001VJS].",
 	year = "1998",
-	volume = "10"
+	volume = "10",
+	ad_theotech = "graph coloring, Sparsity"
 }
 
 @PHDTHESIS{
@@ -4712,7 +4714,8 @@
 	type = "Technical Report",
 	referred = "[Hossain2001RtN].",
 	year = "1997",
-	number = "72"
+	number = "72",
+	ad_theotech = "graph coloring, Jacobian-vector product, Sparsity"
 }
 
 @INCOLLECTION{
@@ -5246,13 +5249,15 @@
 
 @ARTICLE{
 	   Baur1983TCo,
-	AUTHOR = "Walter Baur and Volker Strassen",
-	TITLE = "The Complexity of Partial Derivatives",
-	JOURNAL = "Theoretical Computer Science",
-	VOLUME = "22",
-	YEAR = "1983",
-	PAGES = "317--330",
-	REFERRED = "[Faure1996SoA], [Giering1997a], [Gold91a], [Grimm1996OTa], [Irim91a];
+	author = "Walter Baur and Volker Strassen",
+	title = "The Complexity of Partial Derivatives",
+	journal = "Theoretical Computer Science",
+	volume = "22",
+	year = "1983",
+	pages = "317--330",
+	doi = "10.1016/0304-3975(83)90110-X",
+	issn = "0304-3975",
+	referred = "[Faure1996SoA], [Giering1997a], [Gold91a], [Grimm1996OTa], [Irim91a];
 	   [Kubo91a]."
 }
 
@@ -6432,17 +6437,19 @@
 
 @ARTICLE{
 	   Grandinetti1988NCo,
-	AUTHOR = "L. Grandinetti and D. Conforti",
-	TITLE = "Numerical Comparisons of Nonlinear Programming Algorithms on Serial and Vector
+	author = "L. Grandinetti and D. Conforti",
+	title = "Numerical Comparisons of Nonlinear Programming Algorithms on Serial and Vector
 	   Processors Using Automatic Differentiation",
-	JOURNAL = "Mathematical Programming",
-	VOLUME = "42",
-	YEAR = "1988",
-	PAGES = "375--389",
-	ABSTRACT = "It is shown by numerical computation that real-world optimal electrical power flow
+	journal = "Mathematical Programming",
+	volume = "42",
+	year = "1988",
+	pages = "375--389",
+	doi = "10.1007/BF01589412",
+	abstract = "It is shown by numerical computation that real-world optimal electrical power flow
 	   problems can be solved in real-time using vector processors. These problems are nonlinear
 	   optimization problems characterized by highly nonlinear constraints and by a large number of
-	   variables, and cannot be solved in real-time, even on mainframe computers."
+	   variables, and cannot be solved in real-time, even on mainframe computers.",
+	ad_theotech = "Parallelism"
 }
 
 @INCOLLECTION{
@@ -6626,15 +6633,17 @@
 	   Iri1984SCo,
 	author = "Masao Iri",
 	title = "Simultaneous Computation of Functions, Partial Derivatives, and Estimates of Rounding
-	   Errors --- Complexity and Practicality",
+	   Errors --- Complexity and Practicality ---",
 	journal = "Japan Journal of Applied Mathematics",
 	year = "1984",
-	VOLUME = "1",
-	NUMBER = "2",
-	PAGES = "223--252",
-	REFERRED = "[Christianson1996SSU], [Kubota1996PFP], [Rall1996AIt].",
-	KEYWORDS = "differentiation arithmetic; error estimates; algebraic complexity.",
-	ABSTRACT = "This paper proves theoretical results about the algebraic complexity involved in
+	volume = "1",
+	number = "2",
+	pages = "223--252",
+	issn = "1868-937X",
+	doi = "10.1007/BF03167059",
+	referred = "[Christianson1996SSU], [Kubota1996PFP], [Rall1996AIt].",
+	keywords = "differentiation arithmetic; error estimates; algebraic complexity.",
+	abstract = "This paper proves theoretical results about the algebraic complexity involved in
 	   calculating the partial derivatives of a function. It is shown that the algebraic complexity of
 	   computing a function of several variables and its partial derivatives with respect to all of the
 	   variables is at most a constant (four, five, six or seven which is independent of the number of
@@ -12345,7 +12354,8 @@
 	series = "Lecture Notes in Computational Science and Engineering",
 	publisher = "Springer",
 	year = "2005",
-	crossref = "Bucker2005ADA"
+	crossref = "Bucker2005ADA",
+	ad_theotech = "graph coloring, Jacobian-vector product, Sparsity"
 }
 
 @INCOLLECTION{
@@ -13951,20 +13961,8 @@
 	   Computational Graph",
 	number = "3",
 	volume = "99",
+	doi = "10.1007/s10107-003-0456-9",
 	ad_theotech = "General, X-Country"
-}
-
-@INPROCEEDINGS{
-	   Griewank2004AaE,
-	isbn = "3-540-23027-0",
-	title = "Analysis and Exploitation of {J}acobian Scarcity",
-	author = "Andreas Griewank and Olaf Vogel",
-	booktitle = "Modelling, Simulation and Optimization of Complex Processes",
-	editor = "H.~Bock and E.~Kostina and H.~Phu and R.~Rannacher",
-	year = "2004",
-	publisher = "Springer",
-	pages = "149--164",
-	address = "New York, NY"
 }
 
 @INCOLLECTION{
@@ -14061,7 +14059,8 @@
 	volume = "93",
 	number = "1",
 	year = "2002",
-	ad_theotech = "Sparsity"
+	ad_theotech = "Sparsity",
+	doi = "10.1007/s101070100281"
 }
 
 @TECHREPORT{
@@ -14084,7 +14083,8 @@
 	pages = "123--130",
 	publisher = "ACM",
 	address = "New York, NY",
-	year = "2002"
+	year = "2002",
+	ad_theotech = "Jacobian-vector product, Sparsity"
 }
 
 @TECHREPORT{
@@ -14819,7 +14819,7 @@
 	year = "2006",
 	pages = "426-434",
 	booktitle = "Recent Trends in Aerospace Design and Optimization",
-	pdf = "http://www.comlab.ox.ac.uk/mike.giles/psfiles/bangalore05.pdf",
+	pdf = "http://people.maths.ox.ac.uk/~gilesm/psfiles/bangalore05.pdf",
 	ad_area = "Computational Fluid Dynamics",
 	ad_tools = "TAPENADE",
 	ad_theotech = "Fixpoint"
@@ -14856,15 +14856,16 @@
 
 @ARTICLE{
 	   Bauer1974CGa,
-	AUTHOR = "F. Bauer",
-	TITLE = "Computational Graphs and Rounding Error",
-	JOURNAL = "{SIAM} Journal on Numerical Analysis",
+	author = "F. Bauer",
+	title = "Computational Graphs and Rounding Error",
+	journal = "{SIAM} Journal on Numerical Analysis",
 	pages = "87--96",
 	key = "Bauer1974CGa",
 	referred = "[Braconnier2002FRE].",
-	YEAR = "1974",
+	year = "1974",
 	volume = "11",
 	number = "1",
+	doi = "10.1137/0711010",
 	ad_theotech = "General"
 }
 
@@ -16587,14 +16588,19 @@
 @INPROCEEDINGS{
 	   Naumann2001PfS,
 	ad_theotech = "Code Optimization",
-	author = "Uwe~Naumann and Peter~Gottschling",
-	title = "Prospects for {S}imulated {A}nnealing in {A}utomatic {D}ifferentiation",
-	booktitle = "SAGA 2002 - Stochastic Algorithms, Foundations and Applications",
+	author = "Uwe Naumann and Peter Gottschling",
+	title = "Prospects for Simulated Annealing in Automatic Differentiation",
+	crossref = "Steinhofel2001ISS",
+	booktitle = "SAGA 2001 - Stochastic Algorithms, Foundations and Applications",
 	year = "2001",
-	editor = "K.~Steinh{\"o}fel",
+	editor = "Kathleen Steinh{\"o}fel",
 	series = "LNCS",
-	volume = "2264",
-	publisher = "Springer, Berlin"
+	number = "2264",
+	pages = "355--359",
+	publisher = "Springer",
+	address = "Berlin",
+	doi = "10.1007/3-540-45322-9_9",
+	isbn = "3-540-43025-3"
 }
 
 @ARTICLE{
@@ -16637,6 +16643,7 @@
 	volume = "3",
 	pages = "555--571",
 	year = "2003",
+	doi = "10.1007/s10107-002-0329-7",
 	publisher = "Springer"
 }
 
@@ -16680,11 +16687,12 @@
 	ad_theotech = "Code Optimization",
 	title = "Simulated Annealing for Optimal Pivot Selection in {J}acobian Accumulation",
 	author = "Uwe Naumann and Peter Gottschling",
-	editor = "A. Albrecht and K. Steinh{\"o}fel",
+	editor = "Andreas Albrecht and Kathleen Steinh{\"o}fel",
 	series = "Lecture Notes in Computer Science",
 	publisher = "Springer",
-	volume = "2827",
+	number = "2827",
 	pages = "83--97",
+	doi = "10.1007/b13596",
 	year = "2003"
 }
 
@@ -16699,6 +16707,7 @@
 	volume = "2658",
 	pages = "575--584",
 	year = "2003",
+	doi = "10.1007/3-540-44862-4_61",
 	mynote = "ANL/MCS-P933-0202"
 }
 
@@ -17512,7 +17521,7 @@
 	number = "4",
 	pages = "18:1--18:36",
 	year = "2008",
-	url = "http://doi.acm.org/10.1145/1377596.1377598",
+	doi = "10.1145/1377596.1377598",
 	ad_tools = "OpenAD",
 	abstract = "The OpenAD/F tool allows the evaluation of derivatives of functions defined by a
 	   Fortran program. The derivative evaluation is performed by a Fortran code resulting from the
@@ -19117,10 +19126,10 @@
 
 @TECHREPORT{
 	   UtkeOUM,
-	author = "Jean Utke and Uwe Naumann",
+	author = "Jean Utke and Uwe Naumann and Andrew Lyons",
 	title = "Open{AD/F}: {U}ser {M}anual",
 	note = "latest version available online at
-	   \url{http://www.mcs.anl.gov/OpenAD/openad.pdf}",
+	   \url{ http://www.mcs.anl.gov/OpenAD/openad.pdf}",
 	institution = "Argonne National Laboratory",
 	ad_tools = "OpenAD"
 }
@@ -19322,7 +19331,7 @@
 	year = "2008",
 	ad_theotech = "Combinatorics",
 	pages = "1--20",
-	doi = "http://doi.acm.org/10.1145/1377603.1377605",
+	doi = "10.1145/1377603.1377605",
 	publisher = "ACM",
 	address = "New York, NY, USA",
 	issn = "0098-3500"
@@ -19375,6 +19384,7 @@
 	volume = "112",
 	pages = "427--441",
 	year = "2006",
+	doi = "10.1007/s10107-006-0042-z",
 	publisher = "Springer",
 	ad_theotech = "Combinatorics"
 }
@@ -19853,6 +19863,20 @@
 }
 
 @ARTICLE{
+	   Naumann2008OJa,
+	author = "U. Naumann",
+	title = "Optimal {J}acobian accumulation is {NP}-complete",
+	journal = "Math. Prog.",
+	volume = "112",
+	number = "2",
+	pages = "427--441",
+	year = "2008",
+	doi = "10.1007/s10107-006-0042-z",
+	publisher = "Springer",
+	ad_theotech = "Combinatorics"
+}
+
+@ARTICLE{
 	   Rall2007EAD,
 	author = "Louis B. Rall",
 	title = "Early Automatic Differentiation: {T}he Ch&#8217;in-{H}orner Algorithm",
@@ -19875,5 +19899,544 @@
 	year = "2006",
 	pages = "81--110",
 	ad_theotech = "Implementation Strategies"
+}
+
+@ARTICLE{
+	   Alexe2009Otd,
+	title = "On the discrete adjoints of adaptive time stepping algorithms",
+	journal = "Journal of Computational and Applied Mathematics",
+	volume = "233",
+	number = "4",
+	pages = "1005 - 1020",
+	year = "2009",
+	issn = "0377-0427",
+	doi = "DOI: 10.1016/j.cam.2009.08.109",
+	url =
+	   "http://www.sciencedirect.com/science/article/B6TYH-4X3W463-5/2/91c25f6f624682c4f6a4ada08b5a4d58",
+	author = "Mihai Alexe and Adrian Sandu",
+	keywords = "Ordinary differential equations (ODEs)",
+	ad_theotech = "Adjoint"
+}
+
+@ARTICLE{
+	   Moylan2005Fpf,
+	doi = "10.1007/s10714-005-0132-x",
+	author = "Andrew J. Moylan and Susan M. Scott and Antony C. Searle",
+	title = "Functional programming framework for {GRworkbench}",
+	journal = "General Relativity and Gravitation",
+	year = "2005",
+	volume = "37",
+	number = "9",
+	pages = "1517--1528",
+	ad_tools = "GRworkbench"
+}
+
+@ARTICLE{
+	   Koutsawa2008Aga,
+	title = "A generic approach for the solution of nonlinear residual equations. {Part I}: The
+	   {D}iamant toolbox",
+	journal = "Computer Methods in Applied Mechanics and Engineering",
+	volume = "198",
+	number = "3--4",
+	pages = "572--577",
+	year = "2008",
+	issn = "0045-7825",
+	doi = "DOI: 10.1016/j.cma.2008.09.003",
+	url =
+	   "http://www.sciencedirect.com/science/article/B6V29-4TFW973-1/2/0c02e0c05f296b632dbe9150485e8b01",
+	author = "Yao Koutsawa and Isabelle Charpentier and El Mostafa Daya and Mohammed Cherkaoui",
+	keywords = "Geometrical nonlinearities",
+	abstract = "Sufficiently smooth nonlinear PDE problems may be addressed through the higher
+	   order derivative computations of the so-called Asymptotic Numerical Method (ANM). In this paper, we
+	   theoretically discuss the generic solution of nonlinear residual equations. We then propose a Matlab
+	   implementation of the ANM based on Automatic Differentiation which allows for significant
+	   improvements in genericity and ease of use. The Diamant toolbox we construct is applied to the study
+	   of the geometrical nonlinear behavior of a laminated glass beam. Numerical results and experimental
+	   performances demonstrate the efficiency of the Diamant tool.",
+	ad_tools = "Diamant"
+}
+
+@ARTICLE{
+	   Keulen2005Roo,
+	title = "Review of options for structural design sensitivity analysis. {P}art 1: {L}inear
+	   systems",
+	journal = "Computer Methods in Applied Mechanics and Engineering",
+	volume = "194",
+	number = "30--33",
+	pages = "3213--3243",
+	year = "2005",
+	note = "Structural and Design Optimization",
+	issn = "0045-7825",
+	doi = "DOI: 10.1016/j.cma.2005.02.002",
+	url =
+	   "http://www.sciencedirect.com/science/article/B6V29-4FY3NYX-1/2/f226c9be188845b2ca940a995c845aad",
+	author = "F. van Keulen and R.T. Haftka and N.H. Kim",
+	keywords = "Review",
+	abstract = "The paper reviews options for structural design sensitivity analysis, including
+	   global finite differences, continuum derivatives, discrete derivatives, and computational or
+	   automated differentiation. The objective is to put these different approaches to design sensitivity
+	   analysis in the context of accuracy and consistency, computational cost, and implementation options
+	   and effort. Linear static analysis and transient dynamic analysis are reviewed. In a separate
+	   appendix, special attention is paid to the semi-analytical method. A future paper will address
+	   design sensitivity analysis in nonlinear structural problems.",
+	ad_theotech = "Introduction"
+}
+
+@ARTICLE{
+	   Hu1998Aoa,
+	title = "Application of an automatic differentiation method to a {2D} {N}avier-{S}tokes {CFD}
+	   code",
+	journal = "Computer Methods in Applied Mechanics and Engineering",
+	volume = "156",
+	number = "1--4",
+	pages = "179--183",
+	year = "1998",
+	issn = "0045-7825",
+	doi = "DOI: 10.1016/S0045-7825(97)00205-3",
+	url =
+	   "http://www.sciencedirect.com/science/article/B6V29-3VYTF9B-9/2/27c97a7a2b0a000f6cd52c7a6875b327",
+	author = "Hong Hu",
+	abstract = "The ADIFOR2.0 automatic differentiator is applied to the FLOMGEM flow solver along
+	   with the grid generator HYPERG2. The FLOMGEM is an advanced Navier-Stokes CFD code for airfoil
+	   computations, which employs multigrid method. The HYPERG2 is a two-dimensional hyperbolic grid
+	   generator for generating a C-mesh. Both non-geometric and geometric sensitivity derivative codes are
+	   obtained. The sensitivity derivatives via automatic differentiation are presented and compared with
+	   divided difference generated derivatives. The study shows that an automatic differentiation method
+	   gives accurate derivative values in an efficient manner.",
+	ad_area = "Computational Fluid Dynamics",
+	ad_tools = "ADIFOR"
+}
+
+@PROCEEDINGS{
+	   Cafieri2009Pot,
+	editor = "Sonia Cafieri and Antonio Mucherino and Giacomo Nannicini and Fabien Tarissan and
+	   Leo Liberti",
+	title = "Proceedings of the 8th Cologne-Twente Workshop on Graphs and Combinatorial
+	   Optimization, CTW 2009, Paris, France, June 2-4 2009",
+	booktitle = "CTW",
+	year = "2009",
+	url = "http://www.lix.polytechnique.fr/ctw09/ctw09-proceedings.pdf"
+}
+
+@INPROCEEDINGS{
+	   Lyons2009AaS,
+	author = "Andrew Lyons",
+	title = "Acyclic and Star Colorings of Joins of Graphs and an Algorithm for Cographs",
+	booktitle = "CTW",
+	year = "2009",
+	pages = "199--202",
+	url = "http://www.lix.polytechnique.fr/ctw09/ctw09-proceedings.pdf\#page=211",
+	crossref = "Cafieri2009Pot",
+	ad_theotech = "Combinatorics, graph coloring, Hessian, Sparsity, Static
+	   Analysis"
+}
+
+
+
+@INPROCEEDINGS{
+	   Nardi2009YAS,
+	author = "Luigi Nardi and Charles Sorror and Fouad Badran and Sylvie Thiria",
+	title = "{YAO}: {A} Software for Variational Data Assimilation Using Numerical Models",
+	booktitle = "Computational Science and Its Applications --- ICCSA 2009, International
+	   Conference, Seoul, Korea, June 29--July 2, 2009, Proceedings, Part II",
+	publisher = "Springer",
+	series = "Lecture Notes in Computer Science",
+	volume = "5593",
+	year = "2009",
+	pages = "621--636",
+	doi = "http://dx.doi.org/10.1007/978-3-642-02457-3_53",
+	ad_tools = "YAO"
+}
+
+@ARTICLE{
+	   Hwang1997Aad,
+	title = "An automatic differentiation technique for sensitivity analysis of numerical
+	   advection schemes in air quality models",
+	journal = "Atmospheric Environment",
+	volume = "31",
+	number = "6",
+	pages = "879--888",
+	year = "1997",
+	issn = "1352-2310",
+	doi = "DOI: 10.1016/S1352-2310(96)00240-3",
+	url =
+	   "http://www.sciencedirect.com/science/article/B6VH3-3SVHG1X-1T/2/8a882a3b1bafa6aa078f03b428fb061f",
+	author = "Dongming Hwang and Daewon W. Byun and M. Talat Odman",
+	ad_area = "Computational Fluid Dynamics",
+	ad_tools = "ADIFOR"
+}
+
+@INPROCEEDINGS{
+	   Tadjouddine2009ADA,
+	author = "E. M. Tadjouddine",
+	title = "Algorithmic Differentiation Applied to Economics",
+	booktitle = "Proceedings of the of the International MultiConference of Engineers and Computer
+	   Scientists 2009 (IMECS 2009), Hong Kong, March 18--20, 2009",
+	year = "2009",
+	editor = "S. I. Ao and O. Castillo and C. Douglas and D. D. Feng and J.-A. Lee",
+	volume = "2",
+	pages = "2199--2204",
+	organization = "International Association of Engineers",
+	publisher = "Newswood Limited",
+	abstract = "This paper discusses the use of the Automatic Differentiation approach in
+	   evaluating derivatives of functions represented by computer programs. We then considered a Cournot
+	   oligopoly modeled by a system of stochastic differential equations. The setting is that of a set of
+	   self-interested firms striving to adjust their productions in the direction of higher profits
+	   subject to mistakes or random shocks. The stochastic differential equations are solved by a
+	   numerical method and the profits are calculated using a Monte Carlo simulation. Then, Automatic
+	   Differentiation is used to propagate sensitivities along each path in an automated fashion.
+	   Numerical results have confirmed the intuition one may have that noisy environments can lead to
+	   important profit differences between firms as well as higher sensitivities as opposed to less noisy
+	   ones.",
+	ad_area = "Economics",
+	ad_tools = "MAD"
+}
+
+@ARTICLE{
+	   Tadjouddine2008VoA,
+	author = "Tadjouddine, E. M.",
+	title = "{Vertex-ordering Algorithms for Automatic Differentiation of Computer Codes}",
+	journal = "The Computer Journal",
+	volume = "51",
+	number = "6",
+	pages = "688--699",
+	doi = "10.1093/comjnl/bxm115",
+	year = "2008",
+	abstract = "In the context of Automatic Differentiation (AD) of functions represented by
+	   computer code via the vertex elimination approach first advocated by Griewank and Reese (On the
+	   Calculation of Jacobian Matrices by the Markowitz Rule. In Griewank, A. and Corliss, G.F. (eds),
+	   Automatic Differentiation of Algorithms: Theory, Implementation and Application, pp. 126-135. SIAM,
+	   1991, Philadelphia, PA.), we present two approximate algorithms based on the linearized
+	   computational graph of the input code. The first is a statement-reordering algorithm aiming to tune
+	   the AD-generated code so as to maximize its performance for modern superscalar processors. The
+	   second is aimed at detecting interface contractions introduced by Bischof and Haghighat
+	   (Hierarchical Approaches to Automatic Differentiation. In Berz, M., Bischof, C., Corliss, G. and
+	   Griewank, A. (eds), Computational Differentiation: Techniques, Applications, and Tools, pp. 83-94.
+	   SIAM, 1996, Philadelphia, PA) in order to enable exploitation of the structure of the input code in
+	   the differentiation process. Performance data are also presented.",
+	url = "http://comjnl.oxfordjournals.org/cgi/content/abstract/51/6/688",
+	eprint = "http://comjnl.oxfordjournals.org/cgi/reprint/51/6/688.pdf",
+	ad_theotech = "Hierarchical Approach"
+}
+
+@ARTICLE{
+	   Tolsma1998Ocd,
+	title = "On computational differentiation",
+	journal = "Computers \& Chemical Engineering",
+	volume = "22",
+	number = "4--5",
+	pages = "475--490",
+	year = "1998",
+	issn = "0098-1354",
+	doi = "DOI: 10.1016/S0098-1354(97)00264-0",
+	url =
+	   "http://www.sciencedirect.com/science/article/B6TFT-3TGSGMN-1/2/45ca7a6bca391c3abe17c47cfa8056e5",
+	author = "John E. Tolsma and Paul I. Barton",
+	ad_theotech = "Introduction"
+}
+
+@ARTICLE{
+	   Baalousha2006Sma,
+	title = "Stochastic modelling and risk analysis of groundwater pollution using {FORM} coupled
+	   with automatic differentiation",
+	journal = "Advances in Water Resources",
+	volume = "29",
+	number = "12",
+	pages = "1815 --1832",
+	year = "2006",
+	issn = "0309-1708",
+	doi = "DOI: 10.1016/j.advwatres.2006.01.006",
+	url =
+	   "http://www.sciencedirect.com/science/article/B6VCF-4JD0YJ1-1/2/ff6ed7cc59b83f4eae72c42f1353f167",
+	author = "Husam Baalousha and J{\"u}rgen K{\"o}ngeter",
+	keywords = "Contaminant transport, Probabilistic modelling, Stochastic hydrology, Reliability
+	   analysis, Gaza Strip",
+	ad_area = "Water Management",
+	ad_tools = "ADIFOR"
+}
+
+@ARTICLE{
+	   Mischler1995ADa,
+	title = "Automatic Differentiation applications to computer aided process engineering",
+	journal = "Computers \& Chemical Engineering",
+	volume = "19",
+	number = "Supplement 1",
+	pages = "779--784",
+	year = "1995",
+	note = "European Symposium on Computer Aided Process Engineering 3-5",
+	issn = "0098-1354",
+	doi = "DOI: 10.1016/0098-1354(95)87129-2",
+	url =
+	   "http://www.sciencedirect.com/science/article/B6TFT-48MRDFW-4G/2/d150752bdfebaba7bf157cb143e154b9",
+	author = "C. Mischler and X. Joulia and E. Hassold and A. Galligo and R. Esposito",
+	keywords = "Automatic Differentiation,forward mode,reverse mode,thermodynamic properties",
+	abstract = "The numerical methods used for solving many scientific computing problems, in
+	   particular, for computer aided process engineering, require the computation of derivatives of a
+	   function. Both the accuracy and the computational requirements of the derivatives are, usually, of
+	   critical importance to ensure the robustness and the efficiency of the numerical solution. The
+	   purpose of this paper is to report on the development and application of computer algebra systems
+	   for automating the implementation of differentiation into existing computer codes. The so-called
+	   Automatic Differentiation (AD) Methods have been tested on several examples of thermodynamic
+	   property calculation routines. We have used the Odyssée system, developed for the project
+	   SAFIR. The various automatic differentiation algorithms, called forward (direct) mode and reverse
+	   (adjoint) mode, have been compared on these examples. Our results show that Automatic
+	   Differentiation algorithms can handle real- life codes and that the codes generated are competitive
+	   in time with calculation of derivatives by divided-difference approximations. For some classes of
+	   programs, the codes generated are much more efficient so as to be competitive with handmade
+	   derivatives. Moreover, Automatic Differentiation avoids the truncation errors found in finite
+	   difference approximation calculation and also the tedious (and error prone) analytical derivation
+	   work done by hand.",
+	ad_area = "Process Engineering",
+	ad_tools = "Odyssee"
+}
+
+@ARTICLE{
+	   Glowinski2005Amp,
+	title = "A multigrid preconditioner and automatic differentiation for non-equilibrium
+	   radiation diffusion problems",
+	journal = "Journal of Computational Physics",
+	volume = "207",
+	number = "1",
+	pages = "354--374",
+	year = "2005",
+	issn = "0021-9991",
+	doi = "DOI: 10.1016/j.jcp.2005.01.032",
+	url =
+	   "http://www.sciencedirect.com/science/article/B6WHY-4FY3P80-1/2/328924fa186d345737bd44585668f6cc",
+	author = "Roland Glowinski and Jari Toivanen",
+	keywords = "Non-equilibrium radiation diffusion,Multigrid method,Preconditioning,Newton-Krylov
+	   method",
+	abstract = "We study the efficient solution of non-equilibrium radiation diffusion problems.
+	   An implicit time discretization leads to the solution of systems of non-linear equations which
+	   couple radiation energy and material temperature. We consider the implicit Euler method, the
+	   mid-point scheme, the two-step backward differentiation formula, and a two-stage implicit
+	   Runge-Kutta method for time discretization. We employ a Newton-Krylov method in the solution of
+	   arising non-linear problems. We describe the computation of the Jacobian matrix for Newton's
+	   method using automatic differentiation based on the operator overloading in Fortran 90. For GMRES
+	   iterations, we propose a simple multigrid preconditioner applied directly to the coupled linearized
+	   problems. We demonstrate the efficiency and scalability of the proposed solution procedure by
+	   solving one-dimensional and two-dimensional model problems.",
+	ad_area = "Radiation"
+}
+
+@ARTICLE{
+	   Slawig2000Doo,
+	title = "Domain optimization of a multi-element airfoil using automatic differentiation",
+	journal = "Advances in Engineering Software",
+	volume = "32",
+	number = "3",
+	pages = "225--237",
+	year = "2000",
+	issn = "0965-9978",
+	doi = "DOI: 10.1016/S0965-9978(00)00087-9",
+	url =
+	   "http://www.sciencedirect.com/science/article/B6V1P-42408GB-5/2/9c3ec2173b228ae1b86304ec09ecb7f6",
+	author = "T. Slawig",
+	keywords = "Domain optimization, Sensitivity analysis, Euler equations, Turbulent
+	   Navier-Stokes equations",
+	abstract = "Automatic differentiation is used to study the dependence of drag and lift of a
+	   four-element airfoil with respect to the position of some flaps in Euler and turbulent Navier-Stokes
+	   flow. Aim is the optimization of a cost functional based on drag and lift with respect to the
+	   position of the flaps as design parameters. The position is defined by the angle of rotation of the
+	   flaps around fixed points. A smooth local grid transformation is presented which retains the
+	   neighborhood relations of the original unstructured mesh. The two-dimensional (2D) compressible
+	   Navier-Stokes/Euler solver NSC2KE from INRIA and a NAG quasi-Netwon optimization routine serve for
+	   the solution of the state equations and the optimization, respectively. The gradient information is
+	   supplied by the automatic differentiation tool Adifor by Argonne National Laboratory.",
+	ad_area = "Computational Fluid Dynamics",
+	ad_tools = "ADIFOR"
+}
+
+@ARTICLE{
+	   Alexe2009Faa,
+	title = "Forward and adjoint sensitivity analysis with continuous explicit {R}unge-{K}utta
+	   schemes",
+	journal = "Applied Mathematics and Computation",
+	volume = "208",
+	number = "2",
+	pages = "328--346",
+	year = "2009",
+	issn = "0096-3003",
+	doi = "DOI: 10.1016/j.amc.2008.11.035",
+	url =
+	   "http://www.sciencedirect.com/science/article/B6TY8-4V2NK83-1/2/722c0c442bc7ea44a74b86ed17ba6137",
+	author = "Mihai Alexe and Adrian Sandu",
+	keywords = "Sensitivity analysis, Dense output, Runge-Kutta pairs, Tangent linear models,
+	   Adjoint models, Automatic differentiation",
+	abstract = "We study the numerical solution of tangent linear, first and second order adjoint
+	   models with high-order explicit, continuous Runge-Kutta pairs. The approaches currently implemented
+	   in popular packages such as SUNDIALS or DASPKADJOINT are based on linear multistep methods. For
+	   adaptive time integration of nonlinear models, interpolation of the forward model solution is
+	   required during the adjoint model simulation. We propose to use the dense output mechanism built in
+	   the continuous Runge-Kutta schemes as a highly accurate and cost-efficient interpolation method in
+	   the inverse problem run. We implement our approach in a Fortran library called DENSERKS, which is
+	   found to compare well to other similar software on a number of test problems."
+}
+
+@ARTICLE{
+	   Hippel2010Tam,
+	title = "TaylUR 3, a multivariate arbitrary-order automatic differentiation package for
+	   Fortran 95",
+	author = "G. M. von Hippel",
+	year = "2010",
+	journal = "Comput.Phys.Commun.",
+	volume = "181",
+	pages = "705--706",
+	abstract = "This new version of TaylUR is based on a completely new core, which now is able to
+	   compute the numerical values of all of a complex-valued function's partial derivatives up to an
+	   arbitrary order, including mixed partial derivatives.",
+	ad_tools = "TaylUR"
+}
+
+@BOOK{
+	   Bock2005MSa,
+	editor = "Hans Georg Bock and Ekaterina Kostina and Hoang Xuan Phu and Rolf Rannacher",
+	title = "Modeling, Simulation and Optimization of Complex Processes",
+	publisher = "Springer",
+	address = "Berlin",
+	year = "2005",
+	isbn = "978-3-540-27170-3",
+	doi = "10.1007/b138710"
+}
+
+@INPROCEEDINGS{
+	   Griewank2005AaE,
+	author = "Andreas Griewank and Olaf Vogel",
+	title = "Analysis and Exploitation of {J}acobian Scarcity",
+	crossref = "Bock2005MSa",
+	booktitle = "Modeling, Simulation and Optimization of Complex Processes",
+	editor = "Hans Georg Bock and Ekaterina Kostina and Hoang Xuan Phu and Rolf Rannacher",
+	year = "2005",
+	pages = "149--164",
+	isbn = "978-3-540-27170-3",
+	doi = "10.1007/3-540-27170-8_12",
+	publisher = "Springer",
+	address = "Berlin"
+}
+
+@ARTICLE{
+	   Hossain2008Gci,
+	abstract = "We describe a graph coloring problem associated with the determination of
+	   mathematical derivatives. The coloring instances are obtained as intersection graphs of row
+	   partitioned sparse derivative matrices. The size of the graph is dependent on the partition and can
+	   be varied between the number of columns and the number of nonzero entries. If solved exactly our
+	   proposal will yield a significant reduction in computational cost of the derivative matrices. The
+	   effectiveness of our approach is demonstrated via a practical problem from computational molecular
+	   biology. We also remark on the hardness of the generated coloring instances.",
+	author = "Hossain, Shahadat and Steihaug, Trond",
+	title = "Graph coloring in the estimation of sparse derivative matrices: Instances and
+	   applications",
+	journal = "Discrete Appl. Math.",
+	volume = "156",
+	number = "2",
+	year = "2008",
+	issn = "0166-218X",
+	pages = "280--288",
+	doi = "http://dx.doi.org/10.1016/j.dam.2006.07.018",
+	publisher = "Elsevier Science Publishers B. V.",
+	address = "Amsterdam, The Netherlands, The Netherlands",
+	ad_theotech = "graph coloring, Sparsity"
+}
+
+@MASTERSTHESIS{
+	   Menke2008SeW,
+	author = "Niels Menke",
+	editor = "Niels Menke",
+	interhash = "967a31860e63eb706a2331c6f2778e33",
+	intrahash = "b8e48126f724c6f2f2009acedff46e7e",
+	note = "Betrachtung und Zerti&#64257;zierung der Sicherheit unter Anwendung des
+	   Common-Criteria-Prozesses",
+	school = "University of Kassel",
+	title = "Sicherheit elektronischer Wahlsysteme am Beispiel des Online-Wahlsystems Polyas",
+	type = "Masters Thesis",
+	year = "2008",
+	month = "09",
+	ad_area = "Engineering",
+	ad_theotech = "Certification"
+}
+
+@ARTICLE{
+	   Nisan1997LBo,
+	author = "Noam Nisan and Avi Wigderson",
+	title = "Lower Bounds on Arithmetic Circuits Via Partial Derivatives",
+	journal = "Computational Complexity",
+	volume = "6",
+	number = "3",
+	year = "1997",
+	pages = "217--234",
+	doi = "10.1007/BF01294256"
+}
+
+@ARTICLE{
+	   Smith1995Dot,
+	abstract = "One way to estimate variance components is by restricted maximum likelihood. The
+	   log-likelihood function is fully defined by the Cholesky factor of a matrix that is usually large
+	   and sparse. In this article forward and backward differentiation methods are developed for
+	   calculating the first and second derivatives of the Cholesky factor and its functions. These
+	   differentiation methods are general and can be applied to either a full or a sparse matrix.
+	   Moreover, these methods can be used to calculate the derivatives that are needed for restricted
+	   maximum likelihood, resulting in substantial savings in computation.",
+	url = "http://www.jstor.org/stable/1390762",
+	author = "S. P. Smith",
+	title = "Differentiation of the {C}holesky Algorithm",
+	journal = "Journal of Computational and Graphical Statistics",
+	volume = "4",
+	number = "2",
+	year = "1995",
+	pages = "134--147",
+	ad_theotech = "Hierarchical Approach"
+}
+
+@ARTICLE{
+	   Probst2010SoS,
+	author = "M. Probst and M. L{\"u}lfesmann and H. M. B{\"u}cker and M. Behr
+	   and C. H. Bischof",
+	title = "Sensitivity of Shear Rate in Artificial Grafts Using Automatic Differentiation",
+	journal = "International Journal for Numerical Methods in Fluids",
+	pages = "1047--1062",
+	doi = "10.1002/fld.2061",
+	abstract = "An accurate numerical simulation of blood requires the solution of incompressible
+	   Navier-Stokes equations coupled with specific constitutive models. We consider a generalized
+	   Newtonian fluid model in which viscosity depends on shear rate, accounting for the shear-thinning
+	   behavior of blood. Previous work on the design of an artificial graft indicated that there is an
+	   influence of the fluid model on the solution of the partial differential equation-constrained shape
+	   optimization problem. Therefore, we carry out a sensitivity analysis of the actual implementation of
+	   the flow solver using automatic differentiation (AD). We compare the sensitivities of shear rate
+	   with respect to viscosity for different configurations and validate the truncation-error-free
+	   sensitivities obtained from AD with those based on divided differencing and, if available, with
+	   analytic derivatives.",
+	year = "2010",
+	volume = "62",
+	number = "9",
+	ad_tools = "ADIFOR",
+	ad_theotech = "Hierarchical Approach"
+}
+
+@ARTICLE{
+	   Probst2010SoO,
+	author = "M. Probst and M. L{\"u}lfesmann and M. Nicolai and H. M.
+	   B{\"u}cker and M. Behr and C. H. Bischof",
+	title = "Sensitivity of Optimal Shapes of Artificial Grafts with Respect to Flow Parameters",
+	journal = "Computer Methods in Applied Mechanics and Engineering",
+	number = "17--20",
+	pages = "997--1005",
+	doi = "10.1016/j.cma.2009.11.013",
+	abstract = "The difficulties arising in the numerical solution of PDE-constrained shape
+	   optimization are manifold. An optimization algorithm iteratively generates updates for the design
+	   parameters, and mesh update techniques are required to automatically adjust the computational domain
+	   on which one or more solutions of the underlying PDE need to be computed. In blood-wetted medical
+	   devices, for example in artificial grafts, blood flow is described by the incompressible
+	   Navier-Stokes equations. Previous studies indicated the need for specific constitutive models to
+	   account for the non-Newtonian nature of blood that might affect the outcome when solving the shape
+	   optimization problem. In this paper, we propose a shape optimization framework that couples a
+	   highly-parallel finite element solver with a NURBS shape parametrization and BFGS-type optimizers.
+	   The entire optimization framework is transformed with automatic differentiation techniques, and the
+	   derivative code is employed to compute derivatives of the optimal shapes with respect to viscosity.
+	   This methodology provides a powerful tool to further investigate the necessity of intricate
+	   constitutive models by taking derivatives with respect to model parameters.",
+	year = "2010",
+	volume = "199",
+	ad_area = "Computational Fluid Dynamics",
+	ad_tools = "ADIFOR, TAPENADE"
 }
 
